<resources>
    <string name="lm_feed_app_name">LikeMinds-Android-Feed</string>
    <string name="lm_feed_new_s">New %s</string>
    <string name="lm_feed_no_posts_s_to_show">No %s to show</string>
    <string name="lm_feed_feed">Feed</string>
    <string name="lm_feed_no_s_to_show">No %s to show</string>
    <string name="lm_feed_be_the_first_one_to_s_here">Be the first one to create %s here</string>
    <string name="lm_feed_no_s_comment_found">No %s found</string>
    <string name="lm_feed_be_the_first_one_to_create_a_s_comment">Be the first one to create a %s</string>
    <string name="lm_feed_creating_s">Creating %s</string>
    <string name="lm_feed_retry">Retry</string>
    <string name="lm_feed_s_like">%s</string>
    <string name="lm_feed_s_likes">%s</string>
    <string name="lm_feed_add_s_comment">Add %s</string>
    <string name="lm_feed_s_answer">%s</string>
    <plurals name="lm_feed_s_comments">
        <item quantity="one">%d %s</item>
        <item quantity="other">%d %s</item>
    </plurals>
    <string name="lm_feed_see_more">&#160;See More</string>
    <string name="lm_feed_link">Link</string>
    <string name="lm_feed_documents">Documents</string>
    <plurals name="lm_feed_placeholder_pages">
        <item quantity="one">1 Page</item>
        <item quantity="other">%d Pages</item>
    </plurals>
    <string name="lm_feed_edited">Edited</string>
    <string name="lm_feed_just_now">Just now</string>
    <string name="lm_feed_something_went_wrong">Something went wrong!</string>
    <string name="lm_feed_no_application_found_to_open_this_document">No application found to open this document</string>
    <string name="lm_feed_share_s">Share %s</string>
    <string name="lm_feed_s_saved">%s Saved</string>
    <string name="lm_feed_s_unsaved">%s Unsaved</string>
    <string name="lm_feed_pin_this_s">Pin This %s</string>
    <string name="lm_feed_unpin_this_s">Unpin This %s</string>
    <string name="lm_feed_s_pinned_to_top">%s pinned to top!</string>
    <string name="lm_feed_s_unpinned">%s unpinned!</string>
    <string name="lm_feed_replying_to_s">Replying to %s</string>
    <string name="lm_feed_write_s_comment">Write %s</string>
    <string name="lm_feed_you_do_not_have_permission_to_create_a_s">You do not have permission to create a %s</string>
    <string name="lm_feed_you_do_not_have_permission_to_s_comment">You do not have permission to %s</string>
    <string name="lm_feed_request_not_processed">Couldn\'t process your request</string>
    <plurals name="lm_feed_replies">
        <item quantity="one">1 Reply</item>
        <item quantity="other">%d Replies</item>
    </plurals>
    <string name="lm_feed_view_more_replies">View more replies</string>
    <string name="lm_feed_placeholder_replies">%1$d of %2$d</string>
    <plurals name="lm_feed_s_comments_small">
        <item quantity="one">%d %s</item>
        <item quantity="other">%d %s</item>
    </plurals>
    <string name="lm_feed_s_comment_deleted">%s Deleted!</string>
    <string name="lm_feed_reply">Reply</string>
    <string name="lm_feed_ellipsize">…</string>
    <string name="lm_feed_s_post">%s</string>
    <string name="lm_feed_notifications">Notifications</string>
    <plurals name="lm_feed_s_likes_small">
        <item quantity="one">%d %s</item>
        <item quantity="other">%d %s</item>
    </plurals>
    <string name="lm_feed_report_sub_header">You would be able to report this %s after selecting a problem.</string>
    <string name="lm_feed_s_comment">%s</string>
    <string name="lm_feed_report">Report</string>
    <string name="lm_feed_report_abuse">Report Abuse</string>
    <string name="lm_feed_please_specify_the_problem_to_continue">Please specify the problem to continue</string>
    <string name="lm_feed_write_description">Write Description</string>
    <string name="lm_feed_selected_at_least_one_report_tag">Please select at least one report tag.</string>
    <string name="lm_feed_please_enter_a_reason">Please enter a reason.</string>
    <string name="lm_feed_delete_post_question">Delete post?</string>
    <string name="lm_feed_delete_post_message">Are you sure you want to delete this post? This action cannot be reversed.</string>
    <string name="lm_feed_reason_for_deleting">Reason for deletion</string>
    <string name="lm_feed_type_your_reason">Type your reason</string>
    <string name="lm_feed_cancel">Cancel</string>
    <string name="lm_feed_confirm">Confirm</string>
    <string name="lm_feed_delete_s_question">Delete %s?</string>
    <string name="lm_feed_delete_s_message">Are you sure you want to delete this %s? This action cannot be reversed.</string>
    <string name="lm_feed_lm_feed_s_deleted">%s Deleted!</string>
    <string name="lm_feed_delete_s_comment_question">Delete %s?</string>
    <string name="lm_feed_delete_s_comment_message">Are you sure you want to delete this %s? This action cannot be reversed.</string>
    <string name="lm_feed_s_deleted">%s Deleted!</string>
    <string name="lm_feed_enter_reason">Enter reason</string>
    <string name="lm_feed_s_is_reported_for_review">%s is reported for review</string>
    <string name="lm_feed_okay">Okay</string>
    <string name="lm_feed_write_something_here">Write something here</string>
    <string name="lm_feed_edit_s">Edit %s</string>
    <string name="lm_feed_save">Save</string>
    <string name="lm_feed_all_topics">All topics</string>
    <string name="lm_feed_books">Books</string>
    <string name="lm_feed_clear">Clear</string>
    <string name="lm_feed_select_topic">Select Topic</string>
    <string name="lm_feed_topics_selected">%d selected</string>
    <string name="lm_feed_no_topics_yet">Oops! No topic found</string>
    <string name="lm_feed_search_hint_text">Search…</string>
    <string name="lm_feed_search_no_results">No Results Found!</string>
    <string name="lm_feed_general_channel_name">General notifications</string>
    <string name="lm_feed_general_channel_description">All general notifications</string>
    <string name="lm_feed_a_s_is_already_uploading">A %s is already uploading!</string>
    <string name="lm_feed_select_topics">Select Topics</string>
    <plurals name="lm_feed_topic_disabled_message_s">
        <item quantity="one">The following topic is disabled. Please remove it to save the %s.</item>
        <item quantity="other">The following topics are disabled. Please remove them to save the %s.</item>
    </plurals>
    <plurals name="lm_feed_topic_disabled">
        <item quantity="one">Topic is Disabled</item>
        <item quantity="other">Topics are Disabled</item>
    </plurals>
    <plurals name="lm_feed_you_can_select_upto_x_items">
        <item quantity="one">You can select up to 1 item!</item>
        <item quantity="other">You can select up to %d items!</item>
    </plurals>
    <string name="lm_feed_nine_nine_plus">99+</string>
    <string name="lm_feed_no_notifications_yet">Oops! You don\'t have any notifications yet!</string>
    <string name="lm_feed_our_team_will_look_into_your_feedback_and_will_take_appropriate_action_on_this_s">Our team will look into your feedback and will take appropriate action on this %s</string>
    <string name="lm_feed_add_more">Add More</string>
    <string name="lm_feed_attach_files">Attach Files</string>
    <string name="lm_feed_add_video">Add Video</string>
    <string name="lm_feed_add_photo">Add Photo</string>
    <string name="lm_feed_s_created">%s created successfully!</string>
    <string name="lm_feed_create_s">Create %s</string>
    <string name="lm_feed_create">Create</string>
    <string name="lm_feed_please_set_domain">Please set your domain while setting up the Feed Core</string>
    <string name="lm_feed_plus_add_an_option">+ Add an option</string>
    <string name="lm_feed_submit_vote">Submit Vote</string>
    <string name="lm_feed_edit_vote">Edit vote</string>
    <string name="lm_feed_community_manager">Community Manager</string>
    <string name="lm_feed_added_by_you">Added by You</string>
    <string name="lm_feed_be_the_first_one_to_vote">Be the first one to vote</string>
    <string name="lm_feed_no_responses">No responses</string>
    <string name="lm_feed_poll_ended">Poll Ended</string>
    <plurals name="lm_feed_select_exactly_d_options">
        <item quantity="one">*Select exactly 1 option</item>
        <item quantity="other">*Select exactly %d options</item>
    </plurals>
    <plurals name="lm_feed_select_at_most_d_options">
        <item quantity="one">*Select at most 1 option</item>
        <item quantity="other">*Select at most %d options</item>
    </plurals>
    <plurals name="lm_feed_select_at_least_d_options">
        <item quantity="one">*Select at least 1 option</item>
        <item quantity="other">*Select at least %d options</item>
    </plurals>
    <string name="lm_feed_poll_vote_time_left">%s left</string>
    <string name="lm_feed_added_by_s">Added by %s</string>
    <plurals name="lm_feed_votes_count">
        <item quantity="one">%d vote</item>
        <item quantity="other">%d votes</item>
    </plurals>
    <string name="lm_feed_add_new_poll_option">Add new poll option</string>
    <string name="lm_feed_type_new_option">Type new option</string>
    <string name="lm_feed_the_results_will_be_visible_after_the_poll_has_ended">The results will be visible after the poll has ended.</string>
    <string name="lm_feed_this_being_an_lm_feed_anonymous_poll_the_names_of_the_voters_cannot_be_disclosed">This being an anonymous poll, the names of the voters cannot be disclosed.</string>
    <string name="lm_feed_poll_ended_vote_cannot_be_submitted_now">Poll ended. Vote can not be submitted now.</string>
    <plurals name="lm_feed_please_select_at_most_d_options">
        <item quantity="one">Please select at most 1 option</item>
        <item quantity="other">Please select at most %d options</item>
    </plurals>
    <plurals name="lm_feed_please_select_at_least_d_options">
        <item quantity="one">Please select at least 1 option</item>
        <item quantity="other">Please select at least %d options</item>
    </plurals>
    <plurals name="lm_feed_please_select_exactly_d_options">
        <item quantity="one">Please select exactly 1 option</item>
        <item quantity="other">Please select exactly %d options</item>
    </plurals>
    <string name="lm_feed_add_poll">Add Poll</string>
    <string name="lm_feed_done">Done</string>
    <string name="lm_feed_new_poll">New Poll</string>
    <string name="lm_feed_poll_question">Poll Question</string>
    <string name="lm_feed_ask_a_question">Ask a question and relax</string>
    <string name="lm_feed_answer_options">Answer options</string>
    <string name="lm_feed_add_an_option">Add an option…</string>
    <string name="lm_feed_poll_expire">Poll expires on</string>
    <string name="lm_feed_dd_mm_yyyy_hh_mm">DD-MM-YYYY hh:mm</string>
    <string name="lm_feed_error_invalid_time">Please select future date as poll expire time.</string>
    <string name="lm_feed_select_poll_expiry_time">Select Poll Expiry Time</string>
    <string name="lm_feed_allow_voters_to_add_options">Allow voters to add options</string>
    <string name="lm_feed_anonymous_poll">Anonymous Poll</string>
    <string name="lm_feed_live_results">Don\'t show live results</string>
    <string name="lm_feed_submit">Submit</string>
    <string name="lm_feed_enter_an_option_that_you_think_is_missing_in_this_poll_this_cannot_be_undone">Enter an option that you think is missing in this poll. This cannot be undone.</string>
    <string name="lm_feed_top_response">Top Response</string>
    <string name="lm_feed_sample_name">Sahil Garg</string>
    <string name="lm_feed_sample_time">20m</string>
    <string name="lm_feed_sample_time_left">5d left</string>
    <string name="lm_feed_poll_select_exactly_sample">*Select exactly 2 options.</string>
    <string name="lm_feed_poll_sample_question">What will be the score today?</string>
</resources>