<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.likeminds.feed.android.core.ui.base.views.LMFeedTextView
            android:id="@+id/tv_poll_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/lm_feed_small_margin"
            android:lineSpacingExtra="@dimen/lm_feed_line_spacing_extra_small"
            app:layout_constraintEnd_toStartOf="@id/iv_edit_poll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/lm_feed_poll_sample_question"
            tools:textColor="@color/lm_feed_dark_grey"
            tools:textSize="@dimen/lm_feed_text_medium" />

        <com.likeminds.feed.android.core.ui.base.views.LMFeedIcon
            android:id="@+id/iv_edit_poll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lm_feed_regular_margin"
            android:layout_marginEnd="@dimen/lm_feed_large_margin"
            android:foreground="?selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@id/iv_clear_poll"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/lm_feed_ic_edit_poll"
            tools:tint="@color/lm_feed_dark_grey" />

        <com.likeminds.feed.android.core.ui.base.views.LMFeedIcon
            android:id="@+id/iv_clear_poll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lm_feed_regular_margin"
            android:layout_marginEnd="@dimen/lm_feed_large_margin"
            android:foreground="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/lm_feed_ic_cross_circle" />

        <com.likeminds.feed.android.core.ui.base.views.LMFeedTextView
            android:id="@+id/tv_poll_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lm_feed_regular_margin"
            android:lineSpacingExtra="@dimen/lm_feed_line_spacing_extra_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_poll_title"
            tools:text="@string/lm_feed_poll_select_exactly_sample"
            tools:textColor="@color/lm_feed_dusty_grey"
            tools:textSize="@dimen/lm_feed_text_medium"
            tools:visibility="visible" />

        <com.likeminds.feed.android.core.ui.widgets.poll.view.LMFeedPollOptionsListView
            android:id="@+id/rv_poll_options"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_poll_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_poll_info" />

        <com.likeminds.feed.android.core.ui.base.views.LMFeedButton
            android:id="@+id/btn_add_option"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lm_feed_large_margin"
            android:minHeight="@dimen/lm_feed_poll_option_min_height"
            android:paddingVertical="@dimen/lm_feed_poll_add_option_vertical_padding"
            android:text="@string/lm_feed_plus_add_an_option"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_poll_title"
            app:layout_constraintTop_toBottomOf="@+id/rv_poll_options"
            tools:cornerRadius="@dimen/lm_feed_corner_radius_medium"
            tools:strokeColor="@color/lm_feed_dusty_grey_20"
            tools:textAllCaps="false"
            tools:textColor="@color/dark_grayish_blue"
            tools:textSize="@dimen/lm_feed_text_large"
            tools:visibility="visible" />

        <com.likeminds.feed.android.core.ui.base.views.LMFeedButton
            android:id="@+id/btn_submit_vote"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lm_feed_large_margin"
            android:paddingHorizontal="@dimen/lm_feed_medium_padding"
            android:paddingVertical="@dimen/lm_feed_medium_padding"
            android:text="@string/lm_feed_submit_vote"
            app:layout_constraintStart_toStartOf="@+id/tv_poll_title"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_option"
            tools:background="@color/lm_feed_majorelle_blue"
            tools:cornerRadius="@dimen/lm_feed_corner_radius_medium"
            tools:textColor="@color/lm_feed_white"
            tools:textSize="@dimen/lm_feed_text_large" />

        <com.likeminds.feed.android.core.ui.base.views.LMFeedTextView
            android:id="@+id/tv_member_voted_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lm_feed_large_margin"
            android:layout_marginBottom="@dimen/lm_feed_large_margin"
            android:foreground="?selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_poll_title"
            app:layout_constraintTop_toBottomOf="@+id/btn_submit_vote"
            tools:ellipsize="end"
            tools:maxLines="2"
            tools:text="@string/lm_feed_be_the_first_one_to_vote"
            tools:textColor="@color/lm_feed_majorelle_blue"
            tools:textSize="@dimen/lm_feed_text_large" />

        <View
            android:id="@+id/view_dot_time_left"
            android:layout_width="@dimen/lm_feed_dot_view_size"
            android:layout_height="@dimen/lm_feed_dot_view_size"
            android:layout_marginStart="@dimen/lm_feed_small_margin"
            android:background="@drawable/lm_feed_shape_dot_grey"
            app:layout_constraintBottom_toBottomOf="@id/tv_member_voted_count"
            app:layout_constraintStart_toEndOf="@+id/tv_member_voted_count"
            app:layout_constraintTop_toTopOf="@+id/tv_member_voted_count" />

        <com.likeminds.feed.android.core.ui.base.views.LMFeedTextView
            android:id="@+id/tv_poll_time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lm_feed_small_margin"
            android:layout_marginTop="@dimen/lm_feed_large_margin"
            android:layout_marginBottom="@dimen/lm_feed_large_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_dot_time_left"
            app:layout_constraintTop_toBottomOf="@+id/btn_submit_vote"
            tools:ellipsize="end"
            tools:maxLines="2"
            tools:text="@string/lm_feed_sample_time_left"
            tools:textColor="@color/lm_feed_grey"
            tools:textSize="@dimen/lm_feed_text_large" />

        <View
            android:id="@+id/view_dot_edit_vote"
            android:layout_width="@dimen/lm_feed_dot_view_size"
            android:layout_height="@dimen/lm_feed_dot_view_size"
            android:layout_marginStart="@dimen/lm_feed_small_margin"
            android:background="@drawable/lm_feed_shape_dot_grey"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tv_poll_time_left"
            app:layout_constraintStart_toEndOf="@+id/tv_poll_time_left"
            app:layout_constraintTop_toTopOf="@+id/tv_poll_time_left"
            tools:visibility="visible" />

        <com.likeminds.feed.android.core.ui.base.views.LMFeedTextView
            android:id="@+id/tv_poll_edit_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lm_feed_small_margin"
            android:layout_marginTop="@dimen/lm_feed_large_margin"
            android:layout_marginBottom="@dimen/lm_feed_large_margin"
            android:foreground="?selectableItemBackgroundBorderless"
            android:text="@string/lm_feed_edit_vote"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/view_dot_edit_vote"
            app:layout_constraintTop_toBottomOf="@+id/btn_submit_vote"
            tools:ellipsize="end"
            tools:maxLines="2"
            tools:textColor="@color/lm_feed_majorelle_blue"
            tools:textSize="@dimen/lm_feed_text_large"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>